FIX https://github.com/OpenIdentityPlatform/OpenDJ/issues/136 OPENDJ_JAVA_ARGS="${OPENDJ_JAVA_ARGS} --illegal-access=permit"